@@ -1,6 +1,8 @@
 package com.jasche.phrasecounter;
 
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 import java.io.FileNotFoundException;
@@ -8,25 +10,71 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Scanner;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 class FileOpenerTest {
 
-    @Test
-    void canReadInvalidFile(){
-        assertThrows(FileNotFoundException.class, () -> FileOpener.readFile(""));
+    @DisplayName("Given that there is a file to read")
+    @Nested
+    class ReadFileTest {
+        private String filename;
+
+        @DisplayName("When the file is invalid")
+        @Nested
+        class InvalidFile {
+
+            @BeforeEach
+            void setUp() {
+                filename = "";
+            }
+
+            @DisplayName("Then a file not found error is given")
+            @Test
+            void exceptionOnReadInvalidFile() {
+                assertThrows(FileNotFoundException.class, () -> FileOpener.readFile(filename));
+            }
+        }
     }
 
-    @Test
-    void canReadWords(){
-        Scanner scanner = new Scanner("I am testing that readWords can read.");
-        List<String> testList = List.of("I", "am", "testing", "that", "readWords", "can", "read.");
-        assertEquals(testList, FileOpener.readWords(scanner));
-    }
+    @DisplayName("Given that there are words to read")
+    @Nested
+    class ReadWordsTest {
+        private Scanner scanner;
+        private List<String> testList;
 
-    @Test
-    void canReadEmpty(){
-        Scanner scanner = new Scanner("");
-        assertEquals(Collections.emptyList(), FileOpener.readWords(scanner));
+        @DisplayName("When there are valid words")
+        @Nested
+        class ValidWords {
+
+            @BeforeEach
+            void setUp() {
+                scanner = new Scanner("I am testing that readWords can read.");
+                testList = List.of("I", "am", "testing", "that", "readWords", "can", "read.");
+            }
+
+            @DisplayName("Then a list can be created with those words")
+            @Test
+            void canReadWords() {
+                assertEquals(testList, FileOpener.readWords(scanner));
+            }
+        }
+
+        @DisplayName("When the words are empty")
+        @Nested
+        class EmptyWords {
+
+            @BeforeEach
+            void setUp() {
+                scanner = new Scanner("");
+                testList = Collections.emptyList();
+            }
+
+            @DisplayName("Then an empty list is created")
+            @Test
+            void canReadEmpty() {
+                assertEquals(testList, FileOpener.readWords(scanner));
+            }
+        }
     }
 }
